syntax = "proto3";

package graph_serialize;

message Edge {
    uint32 from = 1;
    uint32 to = 2;
    double weight = 3;
    string bus_name = 4;
    uint32 span_count = 5;
}

message IncidenceList {
    repeated uint32 edge_id = 1;
}

message Graph {
    repeated Edge edges = 1;
    repeated IncidenceList incidence_list = 2;
}
